--- a/chingoal/account/templates/account/login.html
+++ b/chingoal/account/templates/account/login.html
@@ -291,11 +291,11 @@
                                         <input name="remember" type="checkbox" value="Remember Me">Remember Me
                                     </label>
                                     <label style="margin-left:120px;">
-                                        <a href="register.html">SignUp</a>
+                                        <a href="{% url 'register' %}">SignUp</a>
                                     </label>
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="home.html" class="btn btn-lg btn-info btn-block">Login</a>
+                                <a href="{% url 'home' %}" class="btn btn-lg btn-info btn-block">Login</a>
                             </fieldset>
                         </form>
                     </div>
