--- a/chingoal/account/templates/account/login.html
+++ b/chingoal/account/templates/account/login.html
@@ -248,7 +248,7 @@
                         <h3 class="panel-title">Please Sign In</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form">
+                        <form role="form" action="{% url 'login' %}" method="post">
                             <fieldset>
                                 <div class="form-group">
                                     <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
@@ -264,8 +264,9 @@
                                         <a href="{% url 'register' %}">SignUp</a>
                                     </label>
                                 </div>
+                                {% csrf_token %}
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="{% url 'home' %}" class="btn btn-lg btn-info btn-block">Login</a>
+                                <button class="btn btn-lg btn-info btn-block" type="commit">Login</a>
                             </fieldset>
                         </form>
                     </div>
