--- a/chingoal/account/templates/account/login.html
+++ b/chingoal/account/templates/account/login.html
@@ -248,13 +248,20 @@
                         <h3 class="panel-title">Please Sign In</h3>
                     </div>
                     <div class="panel-body">
+                        {% if form.errors %}
+                        <p>
+                        Incorrect email and password.
+                        </p>
+                        {% endif %}
                         <form role="form" action="{% url 'login' %}" method="post">
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                                     {{ form.username.label_tag }}
+                                        {{ form.username}}
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                                    {{ form.password.label_tag }}
+                                        {{ form.password}}
                                 </div>
                                 <div class="checkbox">
                                     <label>
@@ -266,7 +273,7 @@
                                 </div>
                                 {% csrf_token %}
                                 <!-- Change this to a button or input when using this as a form -->
-                                <button class="btn btn-lg btn-info btn-block" type="commit">Login</a>
+                                <button class="btn btn-lg btn-info btn-block" type="submit">Login</a>
                             </fieldset>
                         </form>
                     </div>
