--- a/chingoal/account/templates/account/register.html
+++ b/chingoal/account/templates/account/register.html
@@ -236,6 +236,10 @@
                         <h3 class="panel-title">Sign Up</h3>
                     </div>
                     <div class="panel-body">
+                        {% for error in register_form.non_field_errors %}
+                        {{error}} <br>
+                        <br>
+                        {% endfor %}
                         <form role="form" action="{% url 'register' %}" method="post">
                             <fieldset>
                                 <div class="form-group">
@@ -247,18 +251,28 @@
                                         <input type="radio" name="optionsRadiosInline" id="optionsRadiosInline2" value="option2">Teacher
                                     </label>
                                 </div>
+                                {% for field in register_form.visible_fields %}
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Username" name="username" type="text" autofocus>
+                                    <td>{{field.label_tag}}</td>
+                                    <td>{{field}}</td>
+                                    {% for error in field.errors %}
+                                    <td id="error">{{error}} </td>
+                                    {% endfor %}
                                 </div>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email">
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password1" type="password" value="">
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="Confirm password" name="password2" type="password" value="">
-                                </div>
+                                {% endfor %}
+                                
+<!--                                <div class="form-group">-->
+<!--                                    <input class="form-control" placeholder="Username" name="username" type="text" autofocus>-->
+<!--                                </div>-->
+<!--                                <div class="form-group">-->
+<!--                                    <input class="form-control" placeholder="E-mail" name="email" type="email">-->
+<!--                                </div>-->
+<!--                                <div class="form-group">-->
+<!--                                    <input class="form-control" placeholder="Password" name="password1" type="password" value="">-->
+<!--                                </div>-->
+<!--                                <div class="form-group">-->
+<!--                                    <input class="form-control" placeholder="Confirm password" name="password2" type="password" value="">-->
+<!--                                </div>-->
                                 <div class="checkbox">
                                     <label>
                                         <input name="remember" type="checkbox" value="Agreement">Agreement Items
