--- a/chingoal/basic/template/edit_profile.html
+++ b/chingoal/basic/template/edit_profile.html
@@ -1,8 +1,39 @@
-{% extends "base.html" %}
-    {% block wrapper-content %}
-     <div id="wrapper">
+<!DOCTYPE html>
+<html lang="en">
 
-        <!-- Navigation -->
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>SB Admin 2 - Bootstrap Admin Theme</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- MetisMenu CSS -->
+    <link href="../bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
+
+    <!-- Custom CSS -->
+    <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
+
+    <!-- Custom Fonts -->
+    <link href="../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body>
+            <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -11,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="home.html">Chingoal</a>
+                <a class="navbar-brand" href="#">Chingoal</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -213,10 +244,10 @@
                     <ul class="dropdown-menu dropdown-user">
                         <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
                         </li>
-                        <li><a href="{% url 'editProfile' %}"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
                         </li>
                         <li class="divider"></li>
-                        <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
                         </li>
                     </ul>
                     <!-- /.dropdown-user -->
@@ -224,159 +255,84 @@
                 <!-- /.dropdown -->
             </ul>
             <!-- /.navbar-top-links -->
-
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </span>
-                            </div>
-                            <!-- /input-group -->
-                        </li>
-                        <li>
-                            <a href="#"><i class="glyphicon glyphicon-home"></i> Dashboard</a>
-                        </li>
-                        <li>
-                            <a href="discussion_board.html"><i class="fa fa-group"></i> Discussion</a>
-                        </li>
-                        <li>
-                            <a href="store.html"><i class="fa fa-shopping-cart"></i> Store</a>
-                        </li>
-                        <li>
-                            <a href="chingoal-post-question.html"><i class="fa fa-bomb"></i> Post Question</a>
-                        </li>
- 
-                    </ul>
-                </div>
-                <!-- /.sidebar-collapse -->
-            </div>
-            <!-- /.navbar-static-side -->
         </nav>
-
-        <!-- Page Content -->
-        <div id="page-wrapper">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h1 class="page-header">Chingoal</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4 col-md-offset-4">
+                <div class="login-panel panel panel-default">
+                    {% for field in editForm.visible_fields %}
+                        {% for error in field.errors %}
+                        <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
+                        {% endfor %}
+                        {% endfor %}
+                        {% for error in editForm.non_field_errors %}
+                            <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
+                        {% endfor %}
+                        {% for error in errors %}
+                            <p class="bg-danger err-msg"><span class="glyphicon glyphicon-exclamation-sign"></span> {{error}}</p>
+                        {% endfor %}
+                        {% if msg %}
+                           <p class="bg-success err-msg"><span class="glyphicon glyphicon-ok-sign"></span>{{ msg }}</p>
+                        {% endif %}
+                    <div class="panel-heading">
+                        <h3 class="panel-title">Edit You Profile</h3>
                     </div>
-                    <!-- /.col-lg-12 -->
-                </div>
-                <!-- /.row -->
-            </div>
-            <!-- /.container-fluid -->
-            <div class="row">
-                      <div class="col-lg-7">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Learning Level
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <p>
-                                <button type="button" class="btn btn-success btn-lg btn-block">Level 1</button>
-                            <br>
-                            </p>
-
-                            <p>
-                                <button type="button" class="btn btn-success btn-lg btn-block">Level 2</button>
-                            <br>
-                            </p>
-
-                            <p>
-                                <button type="button" class="btn btn-info btn-lg btn-block">Level 3</button>
-                            <br>
-                            </p>
-
-                            <p>
-                            <button type="button" class="btn btn-info btn-lg" onclick="location.href='chingoal-learn.html'">Session 1</button>
-                            <button type="button" class="btn btn-info btn-lg" onclick="location.href='chingoal-learn.html'">Session 2</button>
-                            <button type="button" class="btn btn-info btn-lg" onclick="location.href='chingoal-learn.html'">Session 3</button>
-                            <br>
-                            <br>
-                            <button type="button" class="btn btn-info btn-lg" onclick="location.href='chingoal-learn.html'">Session 4</button>
-                            <button type="button" class="btn btn-info btn-lg" onclick="location.href='chingoal-learn.html'">Session 5</button>
-                            <br>
-                            <br>
-                            </p>
-
-                            <p>
-                                <button type="button" class="btn btn-primary btn-lg btn-block">Level 4</button>
-                            <br>
-                            </p>
-
-                            <p>
-                                <button type="button" class="btn btn-primary btn-lg btn-block">Level 5</button>
-                            <br>
-                            </p>
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel-default -->
-               </div>
-               <!-- /.col-lg-7 -->
-            <div class="col-lg-5">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            User Profile
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-xs-6 col-md-3 col-md-offset-4">
-                                    <a href="#" class="thumbnail">
-                                        <img src="../image/people1.jpeg" alt="no image" width="300px" style=" height:100px;width:350px;">
-                                    </a>
+                    <div class="panel-body">
+                        <form role="form" method="POST" enctype="multipart/form-data" action="#">  
+                            <fieldset>
+                                {% for field in editForm.visible_fields %}
+                                    <div class="form-group">
+                                        <span>
+                                          {{ field.label }}
+                                          {{ field }}
+                                        </span>
+                                    </div>
+                                {% endfor %}
+                                <!-- 
+<div class="form-group" >
+                                    <span style= "position:absolute,font-size:20px" class="fa fa-user fa-fw"></span> 
+                                    <input class=" form-control" placeholder="Username" name="username" type="text" autofocus>
                                 </div>
-
-                            </div>
-                            <div class=" row col-xs-6 col-md-3 col-md-offset-3">
-                            <span>Username:Tom</span><br/>
-                            <span>Title:Pupil</span>
-                            </div>
-                        </div>
-                        <!-- /.panel-body -->
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="E-mail" name="email" type="email">
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="Please enter your old password" name="old_password" type="password" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="Password" name="password1" type="password" value="">
+                                </div>
+                                <div class="form-group">
+                                    <input class="form-control" placeholder="Confirm password" name="password2" type="password" value="">
+                                </div>
+ -->
+                                <div class="checkbox">
+                                    <label>
+                                        <input name="remember" type="checkbox" value="Agreement">Agreement Items
+                                    </label>
+                                </div>
+                                <!-- Change this to a button or input when using this as a form -->
+                                <a href="home.html" class="btn btn-lg btn-success btn-block">Update</a>
+                            </fieldset>
+                        </form>
                     </div>
-                    <!-- /.panel-default -->
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                           Achievement
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class=" col-md-offset-2">
-                            <span>User Level:</span>
-                            <p class="fa fa-star"></p>
-                            <p class="fa fa-star"></p>
-                            <p class="fa fa-star"></p>
-                            <p class="fa fa-star"></p>
-                            <p class="fa fa-star"></p>
-                            </div>
-                            <div class=" col-md-offset-2">
-                                <span>Schedule:<input type="text" placeholder="one lesson" readonly> Per Day</span>
-                            </div>
-                        </div>
-
-                        <div class="form-group input-group col-md-offset-2">
-                            <span class="input-group-addon">Money</span>
-                            <input type="text" class="form-control">
-                            <span class="input-group-addon">$</span>
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel-default -->
+                </div>
             </div>
-            <!-- /.col-lg-5 -->
         </div>
-        <!-- /.row -->
     </div>
-    <!-- /#wrapper -->
 
-     {% endblock %}
+    <!-- jQuery -->
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <!-- Metis Menu Plugin JavaScript -->
+    <script src="../bower_components/metisMenu/dist/metisMenu.min.js"></script>
+
+    <!-- Custom Theme JavaScript -->
+    <script src="../dist/js/sb-admin-2.js"></script>
+
+</body>
+
+</html>
