--- a/chingoal/account/templates/account/edit_profile.html
+++ b/chingoal/account/templates/account/edit_profile.html
@@ -1,4 +1,4 @@
-
+	{% extends "base.html" %}
     {% block narbar-content %}
 
             <!-- Navigation -->
@@ -10,7 +10,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Chingoal</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Chingoal</a>
             </div>
             <!-- /.navbar-header -->
 
@@ -251,7 +251,7 @@
                         <h3 class="panel-title">Edit You Profile</h3>
                     </div>
                     <div class="panel-body">
-                        <form role="form" method="POST" enctype="multipart/form-data" action="#">  
+                        <form role="form" method="POST" enctype="multipart/form-data" action="{% url 'editProfile' %}">  
                             <fieldset>
                                 {% for field in editForm.visible_fields %}
                                     <div class="form-group">
@@ -261,32 +261,15 @@
                                         </span>
                                     </div>
                                 {% endfor %}
-                                <!-- 
-<div class="form-group" >
-                                    <span style= "position:absolute,font-size:20px" class="fa fa-user fa-fw"></span> 
-                                    <input class=" form-control" placeholder="Username" name="username" type="text" autofocus>
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="E-mail" name="email" type="email">
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="Please enter your old password" name="old_password" type="password" value="">
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="Password" name="password1" type="password" value="">
-                                </div>
-                                <div class="form-group">
-                                    <input class="form-control" placeholder="Confirm password" name="password2" type="password" value="">
-                                </div>
- -->
                                 <div class="checkbox">
                                     <label>
                                         <input name="remember" type="checkbox" value="Agreement">Agreement Items
                                     </label>
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="home.html" class="btn btn-lg btn-success btn-block">Update</a>
+                                <button type= "submit" class="btn btn-lg btn-success btn-block">Update</button>
                             </fieldset>
+                             {% csrf_token %}
                         </form>
                     </div>
                 </div>
