--- a/chingoal/account/templates/account/login.html
+++ b/chingoal/account/templates/account/login.html
@@ -256,11 +256,11 @@
                         <form role="form" action="{% url 'login' %}" method="post">
                             <fieldset>
                                 <div class="form-group">
-                                     {{ form.username.label_tag }}
+                                     <!-- {{ form.username.label_tag }} -->
                                         {{ form.username}}
                                 </div>
                                 <div class="form-group">
-                                    {{ form.password.label_tag }}
+                                    <!-- {{ form.password.label_tag }} -->
                                         {{ form.password}}
                                 </div>
                                 <div class="checkbox">
