--- a/chingoal/home/templates/home.html
+++ b/chingoal/home/templates/home.html
@@ -353,15 +353,45 @@
                         <div class="panel-body">
                             <div class=" col-md-offset-2">
                             <span>User Level:</span>
+                            <p>{{ cur_user.progress_level }}</p>
+<!-- 
                             <p class="fa fa-star"></p>
                             <p class="fa fa-star"></p>
                             <p class="fa fa-star"></p>
                             <p class="fa fa-star"></p>
                             <p class="fa fa-star"></p>
+ -->
                             </div>
                             <div class=" col-md-offset-2">
-                                <span>Schedule:<input type="text" placeholder="one lesson" readonly> Per Day</span>
+                                <span>Schedule:<p>{{ cur_user.progress_lesson }}</p> Per Day</span>
                             </div>
+                                                     
+                                
+                                <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">Edit</button>
+                                <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" style="display: none;">
+                                    <div class="modal-dialog">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                                                <h4 class="modal-title" id="myModalLabel">New Post</h4>
+                                            </div>
+                                            <div class="modal-body">
+                                                <form role="form" action="{% url 'editSchedule' %}" method="post">
+                                                    <div class="form-group">
+                                                        <!-- <label>Text area</label> -->
+                                                        {% for field in scheduleForm.visible_fields %}
+                                                            {{field}}
+                                                            <br>
+                                                        {% endfor %}    
+                                                    </div>
+                                                    <button type="submit" class="btn btn-default">Submit</button>
+                                                    {% csrf_token %}
+                                                </form>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                           
                         </div>
 
                         <div class="form-group input-group col-md-offset-2">
