update store view,url,homepage

--- a/chingoal/home/templates/home.html
+++ b/chingoal/home/templates/home.html
@@ -246,7 +246,7 @@
                             <a href="discussion_board.html"><i class="fa fa-group"></i> Discussion</a>
                         </li>
                         <li>
-                            <a href="store.html"><i class="fa fa-shopping-cart"></i> Store</a>
+                            <a href="{% url 'store' %}"><i class="fa fa-shopping-cart"></i> Store</a>
                         </li>
                         <li>
                             <a href="chingoal-post-question.html"><i class="fa fa-bomb"></i> Post Question</a>
