--- a/chingoal/store/templates/store/store.html
+++ b/chingoal/store/templates/store/store.html
@@ -271,23 +271,27 @@
                     <div class="col-lg-9">
                         <div class="row">
                             <div class="col-lg-4">
-                                <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRuS6gFa8By1RA58mkaFA_TSdXHjvRmN7l2794g5PWWoCXTssKyVw" alt="Logo" height="150" width="150" data-toggle="modal" data-target="#myModal">                             
+                                <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRuS6gFa8By1RA58mkaFA_TSdXHjvRmN7l2794g5PWWoCXTssKyVw" alt="Logo" height="150" width="150" >                             
                                 <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspPupil</p>
                             </div>   
                             <div class="col-lg-4">
-                                <img src="http://www.ctcartoons.com/wp-content/uploads/symbiostock_rf_content/2470-child-student.jpg" alt="Logo" height="150" width="150" data-toggle="modal" data-target="#myModal">                             
+                                <img src="http://www.ctcartoons.com/wp-content/uploads/symbiostock_rf_content/2470-child-student.jpg" alt="Logo" height="150" width="150">                             
                              <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspFreshman</p>
                             </div>                                 
                             <div class="col-lg-4">
-                                <img src="http://teethgeek.com/wp-content/uploads/2012/06/clipart0198.jpg" alt="Logo" height="150" width="150" data-toggle="modal" data-target="#myModal">                             
+                                <img src="http://teethgeek.com/wp-content/uploads/2012/06/clipart0198.jpg" alt="Logo" height="150" width="150">                             
                             <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSophomore</p>
                             </div>                             
                             <div class="col-lg-4">
-                                <img src="https://image-gr.s3.envato.com/files/86093962/pv_590.jpg" alt="Logo" height="150" width="150" data-toggle="modal" data-target="#myModal">                             
+                                <img src="https://image-gr.s3.envato.com/files/86093962/pv_590.jpg" alt="Logo" height="150" width="150">                             
                             <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspJunior</p>
                             </div>                                 
                             <div class="col-lg-4">
-                                <img src="http://previews.123rf.com/images/yayayoy/yayayoy1006/yayayoy100600040/7239116-Happy-graduated-student-Stock-Vector-graduation-cartoon-graduate.jpg" alt="Logo" height="150" width="150" data-toggle="modal" data-target="#myModal">                             
+                                <img src="http://previews.123rf.com/images/yayayoy/yayayoy1006/yayayoy100600040/7239116-Happy-graduated-student-Stock-Vector-graduation-cartoon-graduate.jpg" alt="Logo" height="150" width="150">                             
+                            <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSenior</p>
+                            </div> 
+                            <div class="col-lg-4">
+                                <img src="http://previews.123rf.com/images/yayayoy/yayayoy1006/yayayoy100600040/7239116-Happy-graduated-student-Stock-Vector-graduation-cartoon-graduate.jpg" alt="Logo" height="150" width="150">                             
                             <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSenior</p>
                             </div> 
                         </div>                        
@@ -297,55 +301,73 @@
                         <p>$10</p>
                     </div>
             </div>
-            <!-- /.row -->
-                                          <!-- Modal -->
-                            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                <div class="modal-dialog">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                            <h4 class="modal-title" id="myModalLabel">Description</h4>
-                                        </div>
-                                        <div class="modal-body">
-                                            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                            <button type="button" class="btn btn-primary">Buy It Now</button>
-                                        </div>
-                                    </div>
-                                    <!-- /.modal-content -->
-                                </div>
-                                <!-- /.modal-dialog -->
-                            </div>
-                            <!-- /.modal --> 
+
             
-            
-                    <div class="container-fluid">
-                <div class="row">
+                <div class="container-fluid">
+                    <div class="row">
                     <div class="col-lg-12">
                         <h1 class="page-header">Unlock Learning</h1>
                     </div>
                     <!-- /.col-lg-12 -->
+                    </div>
                 </div>
-                <!-- /.row -->
-            </div>
-            <!-- /.container-fluid -->
-                    <div class="row">
+                <div class="row">
                     <div class="panel panel-default">
                         <div class="panel-body">
-                            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><span class="fa fa-lock"></span> Session 1</button>
-                            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><span class="fa fa-lock"></span> Session 2</button>
-                            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><span class="fa fa-lock"></span> Session 3</button>
-                            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><span class="fa fa-lock"></span> Session 4</button>
-                            <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal"><span class="fa fa-lock"></span> Session 5</button>
+                            <button type="button" id="myButton1" class="btn btn-primary btn-lg"><span class="fa fa-lock"></span> Session 1</button>
+                            <button type="button" id="myButton2" class="btn btn-primary btn-lg"><span class="fa fa-lock"></span> Session 2</button>
+                            <button type="button" id="myButton3" class="btn btn-primary btn-lg"><span class="fa fa-lock"></span> Session 3</button>
+                            <button type="button" id="myButton4" class="btn btn-primary btn-lg"><span class="fa fa-lock"></span> Session 4</button>
+                            <button type="button" id="myButton5" class="btn btn-primary btn-lg"><span class="fa fa-lock"></span> Session 5</button>
                         </div>
-                        <!-- /.panel-body -->
+                        
                     </div> 
-                    <!-- /.panel-default -->
-        </div>
-        <!-- /.row -->
+                </div>              
     </div>
+<!-- 
+    <script language="Javascript">
+        var = LEVELS["One level","Two levels","Three levels","Four levels","Five levels"];
+    document.getElementById("myButton1").onclick = function () {
+        var r=confirm("Do you want to unlock lesson 1?");
+        if (r==true) {
+            location.href = "unlock-learning/LEVELS[0]";
+        }       
+    };
+    document.getElementById("myButton2").onclick = function () {
+        var r=confirm("Do you want to unlock lesson 2?");
+        if (r==true) {
+            location.href = "unlock-learning/LEVELS[1]";
+        }       
+    };
+    document.getElementById("myButton3").onclick = function () {
+        var r=confirm("Do you want to unlock lesson 3?");
+        if (r==true) {
+            location.href = "unlock-learning/LEVELS[2]";
+        }       
+    };
+    document.getElementById("myButton4").onclick = function () {
+        var r=confirm("Do you want to unlock lesson 4?");
+        if (r==true) {
+            location.href = "unlock-learning/LEVELS[3]";
+        }       
+    };
+    document.getElementById("myButton5").onclick = function () {
+        var r=confirm("Do you want to unlock lesson 5?");
+        if (r==true) {
+            location.href = "unlock-learning/LEVELS[4]";
+        }       
+    };
+     </script>
+ -->
+
+    {% load static %}
+	<script src="{% static "jquery-2.1.4.min.js" %}"></script>
+	<script src="{% static "store.js" %}"></script>
+
+<!-- 
+    <script src="../static/jquery-2.1.4.min.js"></script>
+    <script src="../static/store.js"></script>
+ -->
     <!-- /#wrapper -->
 
      {% endblock %}
