--- a/new_html/css/custom_view_profile.css
+++ b/new_html/css/custom_view_profile.css
@@ -2,10 +2,10 @@
 body
 {
     font-family: 'Open Sans', sans-serif;
+	height:100%;
 }
- .card {
+.card {
     margin-top: 0px;
-	
     padding: 30px;
     background-color: rgba(214, 224, 226, 0.2);
     -webkit-border-top-left-radius:5px;
@@ -18,6 +18,7 @@ body
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 	width:100%;
+	 
 }
 .card.hovercard {
     position: relative;
@@ -29,11 +30,11 @@ body
     background-color: #fff;
     background-color: rgba(255, 255, 255, 1);
 	width:96%;
+	height:170px;
+	z-index:9999;
 }
 .card.hovercard .card-background {
-    height: 130px;
-	
-	
+    height:70px;	
 }
 .card-background img {
     -webkit-filter: blur(25px);
@@ -50,6 +51,7 @@ body
     top: 15px;
     left: 0;
     right: 0;
+	
 }
 .card.hovercard .useravatar img {
     width: 100px;
@@ -57,6 +59,7 @@ body
     max-width: 100px;
     max-height: 100px;
 	margin-top:30px;
+	padding-bottom:0px;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
@@ -86,8 +89,7 @@ body
     text-overflow: ellipsis;
 }
 .card.hovercard .bottom {
-    padding: 0 20px;
-    
+    padding: 0 20px;   
 }
 .btn-pref .btn {
     -webkit-border-radius:0 !important;
@@ -99,6 +101,43 @@ body
 	margin-top:-30px;
 	}
 .set-bottom {
-	 z-index:-100; 
+	 
 	 position:relative;
+	 top:30px;
+	}
+.follower{
+	position:relative;
+	left:200px;
+	top:-90px;
+	height:20px;
+	}	
+.tab-timeline{
+	padding-top:0px;
+	height:35px;
+	}
+#textarea1{
+	margin:25px 50px 0 25px;
+	width:97.5%;
+	height:100px;
+	border:2px solid rgba(0,0,0,1.00);
+	resize:none;
+}
+.button1{
+	border:1px black solid;
+	background-color: #ffffff;
+	border-radius:15px;
+	opacity:0.6;
+	float:right;
+	margin:10px 25px 10px 0px;
+	position:relative;
+	left:25px;
+	font-size:15px;
+	font-weight:bold;
+	}
+.hint{
+	position:relative;
+	left:400px;
+	top:-50px;
+	font-size:12px;
+	color:rgba(134,134,134,1.00);
 	}
