Add script-content block

--- a/chingoal/chingoal/template/base.html
+++ b/chingoal/chingoal/template/base.html
@@ -46,6 +46,9 @@
     {% block main-content %}
     {% endblock %}
     
+    {% block script-content %}
+    {% endblock %}
+    
     <!-- jQuery -->
     <script src="{% static "bower_components/jquery/dist/jquery.min.js"%}"></script>
 
