--- a/new_html/css/custom_view_profile.css
+++ b/new_html/css/custom_view_profile.css
@@ -5,6 +5,7 @@ body
 	height:100%;
 }
 .card {
+	position:relative;
     margin-top: 0px;
     padding: 30px;
     background-color: rgba(214, 224, 226, 0.2);
@@ -18,7 +19,8 @@ body
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 	width:100%;
-	 
+	overflow:hidden;
+	z-index:9999;
 }
 .card.hovercard {
     position: relative;
@@ -31,10 +33,11 @@ body
     background-color: rgba(255, 255, 255, 1);
 	width:96%;
 	height:170px;
-	z-index:9999;
+	z-index:2;
 }
 .card.hovercard .card-background {
     height:70px;	
+	z-index:2;
 }
 .card-background img {
     -webkit-filter: blur(25px);
@@ -45,13 +48,14 @@ body
     margin-left: -100px;
     margin-top: -200px;
     min-width: 130%;
+	z-index:2;
 }
 .card.hovercard .useravatar {
     position: absolute;
     top: 15px;
     left: 0;
     right: 0;
-	
+	z-index:2;
 }
 .card.hovercard .useravatar img {
     width: 100px;
@@ -89,7 +93,8 @@ body
     text-overflow: ellipsis;
 }
 .card.hovercard .bottom {
-    padding: 0 20px;   
+    padding: 0 20px;  
+	
 }
 .btn-pref .btn {
     -webkit-border-radius:0 !important;
@@ -99,11 +104,14 @@ body
 	width:96%;
 	margin-left:25px;
 	margin-top:-30px;
+	
 	}
-.set-bottom {
-	 
+.set-bottom { 
 	 position:relative;
+	 z-index:0;
+	 left: 10px;
 	 top:30px;
+	 padding-top:50px;
 	}
 .follower{
 	position:relative;
