--- a/chingoal/home/templates/home.html
+++ b/chingoal/home/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "newbase.html" %}
+{% extends "base.html" %}
 
 
     {% block title-content %}   
@@ -7,7 +7,7 @@
 
     {% block head %}
     {% load static %}
-    <link href="{% static "newhtml/css/home.css"%}" rel="stylesheet">
+    <link href="{% static "css/home.css"%}" rel="stylesheet">
     {% endblock %}
     {% block head-other %}
     {% endblock %}
