--- a/chingoal/chingoal/template/base.html
+++ b/chingoal/chingoal/template/base.html
@@ -15,21 +15,21 @@
     
     {% load static %}
     <!-- Bootstrap Core CSS -->
-    <link href="{% static "newhtml/css/bootstrap.min.css"%}" rel="stylesheet">
+    <link href="{% static "css/bootstrap.min.css"%}" rel="stylesheet">
 
     <!-- Custom CSS -->
     {% block head %}
-    <link href="{% static "newhtml/css/custom_dashboard.css"%}" rel="stylesheet">
+    <link href="{% static "css/custom_dashboard.css"%}" rel="stylesheet">
     {% endblock %}
     {% block head-other %}
-    <link href="{% static "newhtml/css/agency_other.css"%}" rel="stylesheet">
+    <link href="{% static "css/agency_other.css"%}" rel="stylesheet">
     {% endblock %}
     {% block head-origin %}
-    <link href="{% static "newhtml/css/agency.css"%}" rel="stylesheet">
+    <link href="{% static "css/agency.css"%}" rel="stylesheet">
     {% endblock %}
     
     <!-- Custom Fonts -->
-    <link href="{% static "newhtml/font-awesome/css/font-awesome.min.css"%}" rel="stylesheet" type="text/css">
+    <link href="{% static "font-awesome/css/font-awesome.min.css"%}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -50,31 +50,31 @@
     {% endblock %}
 
     <!-- jQuery -->
-    <script src="{% static "newhtml/js/jquery.js"%}"></script>
+    <script src="{% static "js/jquery.js"%}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="{% static "newhtml/js/bootstrap.min.js"%}"></script>
+    <script src="{% static "js/bootstrap.min.js"%}"></script>
 
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="{% static "newhtml/js/classie.js"%}"></script>
+    <script src="{% static "js/classie.js"%}"></script>
     {% block other-script %}
     {% load static %}
-    <script src="{% static "newhtml/js/cbpAnimatedHeader_other.js"%}"></script>
+    <script src="{% static "js/cbpAnimatedHeader_other.js"%}"></script>
     {% endblock %}
     {% block origin-script %}
     {% load static %}
-    <script src="{% static "newhtml/js/cbpAnimatedHeader.js"%}"></script>
+    <script src="{% static "js/cbpAnimatedHeader.js"%}"></script>
     {% endblock %}
     
     <!-- Contact Form JavaScript -->
     {% load static %}
-    <script src="{% static "newhtml/js/jqBootstrapValidation.js"%}"></script>
-    <!-- // <script src="{% static "newhtml/js/contact_me.js"%}"></script> -->
+    <script src="{% static "js/jqBootstrapValidation.js"%}"></script>
+    <!-- // <script src="{% static "js/contact_me.js"%}"></script> -->
 
     <!-- Custom Theme JavaScript -->
     {% load static %}
-    <script src="{% static "newhtml/js/agency.js"%}"></script>
+    <script src="{% static "js/agency.js"%}"></script>
 
 </body>
 
