--- a/chingoal/account/templates/account/login.html
+++ b/chingoal/account/templates/account/login.html
@@ -7,7 +7,7 @@
 
     {% block head %}
     {% load static %}
-    <link href="{% static "newhtml/css/custom_register.css"%}" rel="stylesheet">
+    <link href="{% static "css/custom_register.css"%}" rel="stylesheet">
     {% endblock %}
     {% block head-other %}
     {% endblock %}
