--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -7,7 +7,7 @@
 
      {% block head %}
     {% load static %}
-    <link href="{% static "newhtml/css/custom_dashboard.css"%}" rel="stylesheet">
+    <link href="{% static "css/custom_dashboard.css"%}" rel="stylesheet">
     {% endblock %}
     {% block head-origin %}
     <!-- <link href="{% static "newhtml/css/agency.css"%}" rel="stylesheet"> -->
