--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -42,7 +42,7 @@
                         <a class="page-scroll" href="#services">Discussion</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Store</a>
+                        <a class="page-scroll" href="{% url 'store' %}">Store</a>
                     </li>                    
                     <li>
                         <a class="page-scroll" href="#contact">About Us</a>
@@ -50,7 +50,7 @@
                     <li>
                         
                      <a href="#portfolioModal1" class="portfolio-link page-scroll" data-toggle="modal">
-            <img src="{% static "img/profile.jpg"%}" class="img-responsive img-circle"%}"  alt="" id="header_profile_picture">                                                
+            <img src="{% static "img/profile.jpg"%}" class="img-responsive img-circle"  alt="" id="header_profile_picture">                                                
                      </a>
                     </li>
                 </ul>
@@ -80,7 +80,7 @@
                 <div class="col-lg-4 text-center">
                     <h3>
                     UserName
-                    </h3>
+                    </h3>   
                     <i class="fa fa-star fa-2x text-muted"></i>
                     <i class="fa fa-star fa-2x text-muted"></i>
                     <i class="fa fa-star fa-2x text-muted"></i>
