--- a/chingoal/store/templates/store/store.html
+++ b/chingoal/store/templates/store/store.html
@@ -13,7 +13,7 @@
     {% endblock %}
 
     {% block main-content %}
-    <!-- Navigation -->
+   <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -60,7 +60,8 @@
         <!--div class="container"-->
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading header1">Chingoal Store</h2>
-                    <h3 class="section-subheading text-muted">Enjoy Yourself.</h3>
+                    <h3 class="section-subheading text-muted subtitle">Enjoy Yourself.</h3>
+                    <span class="header1 vm">You Virtual Money:{{cur_user.user_vm}}</span>
                 </div>   
           <div class="container">
             <div class="row">
@@ -71,14 +72,14 @@
             <div class="row bg-light-gray">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/1.jpg"%}" class="img-responsive img-circle title_img" alt="">
+                        <img src="img/team/1.jpg" class="img-responsive img-circle title_img" alt="">
                         <h4 class="header1">Pupil</h4>
                         <p class="text-muted">$3</p>                       
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/2.jpg"%}" class="img-responsive img-circle title_img" alt="">
+                        <img src="img/team/2.jpg" class="img-responsive img-circle title_img" alt="">
                         <h4 class="header1">Freshman</h4>
                         <p class="text-muted">$5</p>
                         
@@ -86,7 +87,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/3.jpg"%}" class="img-responsive img-circle title_img" alt="">
+                        <img src="img/team/3.jpg" class="img-responsive img-circle title_img" alt="">
                         <h4 class="header1">Sophomore</h4>
                         <p class="text-muted">$8</p>
                     </div>
@@ -96,7 +97,7 @@
              <div class="row bg-light-gray">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/1.jpg"%}" class="img-responsive img-circle title_img" alt="">
+                        <img src="img/team/1.jpg" class="img-responsive img-circle title_img" alt="">
                         <h4 class="header1">Junior</h4>
                         <p class="text-muted">$10</p>
                         
@@ -104,7 +105,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/2.jpg"%}" class="img-responsive img-circle title_img" alt="">
+                        <img src="img/team/2.jpg" class="img-responsive img-circle title_img" alt="">
                         <h4 class="header1">Senior</h4>
                         <p class="text-muted">$15</p>
      
@@ -112,7 +113,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="{% static "img/3.jpg"%}" class="img-responsive img-circle title_img" alt="">
+                        <img src="img/team/3.jpg" class="img-responsive img-circle title_img" alt="">
                         <h4 class="header1">Graduate</h4>
                         <p class="text-muted">$20</p>
                     </div>
@@ -126,43 +127,11 @@
              <div class="row">
                     <div class="panel panel-default bg-light-gray">
                         <div class="panel-body col-md-offset-1">
-                             {% if cur_user.unlock > 0 %}<button type="button" class="btn btn-default btn-lg btn-circle">
-                            <span class="fa fa-unlock"></span>
-                            {% else %}<button type="button" id="myButton1" value="1" class="btn btn-default btn-lg btn-circle" onClick="unlock('myButton1',{{cur_user.unlock}})">
-                            <span class="fa fa-lock"></span>
-                            {% endif %} Session 1</button>
-                            
-                            {% if cur_user.unlock > 1 %}<button type="button" class="btn btn-danger btn-lg btn-circle">
-                            <span class="fa fa-unlock"></span>
-                            {% else %}<button type="button" id="myButton2" value="2" class="btn btn-danger btn-lg btn-circle" onClick="unlock('myButton2',{{cur_user.unlock}})">
-                            <span class="fa fa-lock"></span>
-                            {% endif %} Session 2</button>
-                            
-                            {% if cur_user.unlock > 2 %}<button type="button" class="btn btn-info btn-lg btn-circle">
-                            <span class="fa fa-unlock"></span>
-                            {% else %}<button type="button" id="myButton3" value="3" class="btn btn-info btn-lg btn-circle" onClick="unlock('myButton3',{{cur_user.unlock}})">
-                            <span class="fa fa-lock"></span>
-                            {% endif %} Session 3</button>
-                            
-                            {% if cur_user.unlock > 3 %}<button type="button" class="btn btn-warning btn-lg btn-circle">
-                            <span class="fa fa-unlock"></span>
-                            {% else %}<button type="button" id="myButton4" value="4" class="btn btn-warning btn-lg btn-circle" onClick="unlock('myButton4',{{cur_user.unlock}})">
-                            <span class="fa fa-lock"></span>
-                            {% endif %} Session 4</button>
-                            
-                            {% if cur_user.unlock > 4 %}<button type="button" class="btn btn-success btn-lg btn-circle">
-                            <span class="fa fa-unlock"></span>
-                            {% else %}<button type="button" id="myButton5" value="5" class="btn btn-success btn-lg btn-circle" onClick="unlock('myButton5',{{cur_user.unlock}})">
-                            <span class="fa fa-lock"></span>
-                            {% endif %} Session 5</button>
-
-
-<!-- 
                             <button type="button" class="btn btn-default btn-lg btn-circle" data-toggle="modal" data-target="#myModal"><span class="fa fa-lock"></span> Lesson 1</button>
                             <button type="button" class="btn btn-danger btn-lg btn-circle" data-toggle="modal" data-target="#myModal"><span class="fa fa-lock"></span> Lesson 2</button>
                             <button type="button" class="btn btn-info btn-lg btn-circle" data-toggle="modal" data-target="#myModal"><span class="fa fa-lock"></span> Lesson 3</button>
                             <button type="button" class="btn btn-warning btn-lg btn-circle" data-toggle="modal" data-target="#myModal"><span class="fa fa-lock"></span> Lesson 4</button>
-                            <button type="button" class="btn btn-success btn-lg btn-circle" data-toggle="modal" data-target="#myModal"><span class="fa fa-lock"></span> Lesson 5</button> -->
+                            <button type="button" class="btn btn-success btn-lg btn-circle" data-toggle="modal" data-target="#myModal"><span class="fa fa-lock"></span> Lesson 5</button>
                         </div>
                        
                     </div> 
@@ -198,6 +167,7 @@
             </div>
         </div>
     </footer>
+
 {% endblock %}
  
 
