--- a/chingoal/store/static/css/custom_store.css
+++ b/chingoal/store/static/css/custom_store.css
@@ -26,7 +26,13 @@
   font-style: italic;
   font-weight: 400;
 }
-
+.vm{
+	position:relative;
+	top:-50px;
+	left:320px;
+	bottom:0px;
+	padding-top:0px;
+	}
 .team-member {
 	margin-top:30px;
 	margin-bottom:0px;
