Add link to view profile page

--- a/chingoal/home/templates/dashboard.html
+++ b/chingoal/home/templates/dashboard.html
@@ -87,7 +87,7 @@
                 <div class="col-lg-2">                    
                 </div>
                 <div class="col-lg-2 text-center">
-                    <img src="{% static "img/profile.jpg"%}" class="img-responsive img-circle"  alt="" id="profile_img">
+                    <a  href="{% url 'viewProfile' username %}"><img src="{% static "img/profile.jpg"%}" class="img-responsive img-circle"  alt="" id="profile_img"></a>
                 </div>
                 
                 <div class="col-lg-4 text-center">
